--- a/src/app/pages/characters/characters.component.html
+++ b/src/app/pages/characters/characters.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center">
   <h1>
-    {{ 'ABOUT.TITLE' | translate }}
+    {{ 'CHARACTERS.TITLE' | translate }}
   </h1>
 </div>
