--- a/src/app/pages/roleplay/roleplay.component.html
+++ b/src/app/pages/roleplay/roleplay.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center">
   <h1>
-    {{ 'ABOUT.TITLE' | translate }}
+    {{ 'ROLEPLAY.TITLE' | translate }}
   </h1>
 </div>
