feat(global): add images for waiting pages

--- a/src/app/pages/roleplay/roleplay.component.html
+++ b/src/app/pages/roleplay/roleplay.component.html
@@ -2,4 +2,8 @@
   <h1>
     {{ 'ROLEPLAY.TITLE' | translate }}
   </h1>
+  <img class="imgWait" src="/assets/images/ChibiWait.png" alt="">
+  <h2>
+    {{ 'BODY.WAIT' | translate }}
+  </h2>
 </div>
