--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,8 +2,12 @@
   <h1>
     {{ 'HOME.TITLE' | translate }}
   </h1>
-  <img class="imgWait" src="/assets/images/ChibiWait.png" alt="">
-  <h2>
-    {{ 'BODY.WAIT' | translate }}
-  </h2>
+  <div class="list-articles-container">
+    <div *ngFor="let article of listArticles" class="article-container">
+      <img src="https://via.placeholder.com/250x100" alt="">
+      <h2>{{ article.title }}</h2>
+      <h3>{{ article.type }}</h3>
+      <p>{{ article.description }}</p>
+    </div>
+  </div>
 </div>
