--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,35 @@
 :host {
-    width: 100%;
+
+    .head-container {
+        position: relative;
+        height: 250px;
+
+        .title-background {
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            //max-width: 600px;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: -1;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .title-container {
+            position: absolute;
+            top: 50%;
+            left: 25%;
+            width: 25%;
+            text-align: left;
+            transform: translateX(-50%) translateY(-50%);
+
+            .logo-image {
+                border: 1px solid black;
+            }
+        }
+    }
 
     .list-articles-container {
         display: flex;
