--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="header-section">
-  <img src="https://via.placeholder.com/50x50" alt="">
-  <a routerLink="" [innerHtml]="'HEADER.TITLE' | translate"></a>
+  <img class="header-logo" src="https://via.placeholder.com/50x50" alt="" routerLink="">
+  <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="" [innerHtml]="'HEADER.TITLE' | translate"></a>
 </div>
 <nav>
     <a routerLinkActive="active" routerLink="roleplay" [innerHtml]="'HEADER.NAV.ROLEPLAY' | translate"></a>
-    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="" [innerHtml]="'HEADER.NAV.HOME' | translate"></a>
+    <a routerLinkActive="active" routerLink="universe" [innerHtml]="'HEADER.NAV.HOME' | translate"></a>
     <a routerLinkActive="active" routerLink="characters" [innerHtml]="'HEADER.NAV.CHARACTERS' | translate"></a>
 </nav>
 <div class="header-section section-right">
