--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -34,6 +34,10 @@
         }
     }
 
+    .header-logo {
+        cursor: pointer;
+    }
+
     .header-section {
         display: flex;
         align-items: center;
