--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center">
-  <div padding-vert class="head-container big-head">
+  <div container padding-vert class="head-container big-head">
     <img class="title-background" src="https://via.placeholder.com/1000x550" alt="">
     <div class="title-container">
         <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div separator></div>
-  <div padding-vert class="head-container">
+  <div container padding-vert class="head-container">
     <img class="title-background" src="https://via.placeholder.com/1000x400" alt="">
     <div class="title-container inverse-container">
         <h2>{{ 'HOME.ROLEPLAY.TITLE' | translate }}</h2>
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div separator></div>
-  <div padding-vert class="head-container">
+  <div container padding-vert class="head-container">
     <img class="title-background" src="https://via.placeholder.com/1000x400" alt="">
     <div class="title-container">
         <h2>{{ 'HOME.CHARACTERS.TITLE' | translate }}</h2>
