--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -1,5 +1,5 @@
 <div style="text-align:center">
-  <div padding-vert class="head-container">
+  <div container padding-vert class="head-container">
     <img class="title-background" src="https://via.placeholder.com/1000x400" alt="">
     <div class="title-container">
         <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div separator></div>
-  <div padding-vert class="list-facts-container">
+  <div container padding-vert class="list-facts-container">
     <div *ngFor="let fact of listFacts | slice:1" class="fact-container" routerLink="/universe/{{fact.id}}">
       <img class="fact-image" src="https://via.placeholder.com/500x200" alt="">
       <h2>{{ fact.title }}</h2>
