--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -3,6 +3,12 @@
     background-color: black;
 }
 
+[container] {
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 [padding-vert] {
     padding-top: 50px;
     padding-bottom: 50px;
