--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header-section">
-  <img class="header-logo" src="https://via.placeholder.com/50x50" alt="" routerLink="">
+  <img class="header-logo" src="/assets/images/logo.png" alt="" routerLink="">
   <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="" [innerHtml]="'HEADER.TITLE' | translate | uppercase"></a>
 </div>
 <nav>
