--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,6 +1,6 @@
 [separator] {
-    height: 1px;
-    background-color: black;
+    height: 2px;
+    background-color: $dark-background-color;
 }
 
 [container] {
