Refractor(global): use another colors from a theme

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,5 +8,5 @@
     <a routerLinkActive="active" routerLink="characters" [innerHtml]="'HEADER.NAV.CHARACTERS' | translate | uppercase"></a>
 </nav>
 <div class="header-section section-right">
-  <a routerLinkActive="active" routerLink="about" [innerHtml]="'HEADER.NAV.ABOUT' | translate | uppercase"></a>
+  <a class="header-title" routerLinkActive="active" routerLink="about" [innerHtml]="'HEADER.NAV.ABOUT' | translate | uppercase"></a>
 </div>
