--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,10 @@
-$default-background-color: #000000;
-$dark-background-color: #222222;
-$light-background-color: #eeeeee;
+$light-color: #EEEEEE;
+$dark-color: #092727;
+$default-color: #000000;
 
-$default-text-color: #eeeeee;
-$primary-text-color: #90a0a0;
+$primary-color: #D1E8E2;
+$dark-primary-color: #116466;
 
-$default-border_color: #eeeeee;
+$secondary-color: #FFCB94;
+$dark-secondary-color: #D9B08C;
 
-$primary-color: #00AAAA;
-$dark-color: #444444;
