--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -15,6 +15,11 @@
         height: 50px;
         line-height: 50px;
         padding: 0 25px;
+        transition: .5s;
+
+        &:hover {
+          box-shadow: 0px 0px 10px $secondary-color;
+        }
 
         &:after {
             content: '';
