--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 :host {
 
     .head-container {
@@ -38,20 +40,24 @@
         flex-wrap: wrap;
         align-content: space-between;
         justify-content: center;
+        max-width: 1260px;
+        border: 10px double $secondary-color;
 
         .fact-container {
             width: 250px;
             height: 300px;
-            border: 1px solid rgba(0,0,0, 0.2);
+            border: 1px solid $dark-color;
             border-radius: 10px;
-            box-shadow: 5px 5px rgba(0,0,0, 0.2);
+            color: $dark-color;
+            background-color: $light-color;
 
             margin: 10px;
             overflow: hidden;
             cursor: pointer;
+            transition: .5s;
 
             &:hover {
-                background-color: rgba(0,0,0, 0.1);
+                box-shadow: 0px 0px 0px 3px $secondary-color;
             }
 
             .fact-image {
