--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -36,7 +36,7 @@
         }
 
         &.active {
-            color: $light-color;
+            color: $secondary-color;
 
             &:after {
                 transform: scaleX(1);
