--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,29 +1,48 @@
-<div style="text-align:center">
-  <div container padding-vert class="head-container big-head">
-    <img class="title-background" src="https://via.placeholder.com/1000x550" alt="">
-    <div class="title-container">
-        <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
-        <h2>{{ 'HOME.UNIVERSE.TITLE' | translate }}</h2>
-        <p>{{ 'HOME.UNIVERSE.RESUME' | translate }}</p>
-        <button routerLink="universe">{{ 'HOME.UNIVERSE.SEEMORE' | translate | uppercase }}</button>
-    </div>
+<div container padding-vert class="head-container big-head">
+  <!--img class="title-background" src="https://via.placeholder.com/1000x550" alt=""-->
+  <div class="title-container">
+      <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
+      <h2>{{ 'HOME.UNIVERSE.TITLE' | translate }}</h2>
+      <p>{{ 'HOME.UNIVERSE.RESUME' | translate }}</p>
+      <button routerLink="universe">{{ 'HOME.UNIVERSE.SEEMORE' | translate | uppercase }}</button>
   </div>
-  <div separator></div>
-  <div container padding-vert class="head-container">
-    <img class="title-background" src="https://via.placeholder.com/1000x400" alt="">
-    <div class="title-container inverse-container">
-        <h2>{{ 'HOME.ROLEPLAY.TITLE' | translate }}</h2>
-        <p>{{ 'HOME.ROLEPLAY.RESUME' | translate }}</p>
-        <button routerLink="roleplay">{{ 'HOME.ROLEPLAY.SEEMORE' | translate | uppercase }}</button>
-    </div>
+  <div class="glyphe-container">
+    <img src="assets/images/glyphe01.png" class="glyphe glyphe01" alt=""/>
+    <img src="assets/images/glyphe02.png" class="glyphe glyphe02" alt=""/>
+    <img src="assets/images/glyphe03.png" class="glyphe glyphe03" alt=""/>
+    <img src="assets/images/glyphe04.png" class="glyphe glyphe04" alt=""/>
+    <img src="assets/images/glyphe05.png" class="glyphe glyphe05" alt=""/>
   </div>
-  <div separator></div>
-  <div container padding-vert class="head-container">
-    <img class="title-background" src="https://via.placeholder.com/1000x400" alt="">
-    <div class="title-container">
-        <h2>{{ 'HOME.CHARACTERS.TITLE' | translate }}</h2>
-        <p>{{ 'HOME.CHARACTERS.RESUME' | translate }}</p>
-        <button routerLink="characters">{{ 'HOME.CHARACTERS.SEEMORE' | translate | uppercase }}</button>
-    </div>
+</div>
+<div separator></div>
+<div container padding-vert class="head-container">
+  <!--img class="title-background" src="https://via.placeholder.com/1000x400" alt=""-->
+  <div class="glyphe-container inversed-container little-container">
+    <img src="assets/images/glyphe01.png" class="glyphe glyphe01" alt=""/>
+    <img src="assets/images/glyphe02.png" class="glyphe glyphe02" alt=""/>
+    <img src="assets/images/glyphe03.png" class="glyphe glyphe03" alt=""/>
+    <img src="assets/images/glyphe04.png" class="glyphe glyphe04" alt=""/>
+    <img src="assets/images/glyphe05.png" class="glyphe glyphe05" alt=""/>
+  </div>
+  <div class="title-container inversed-container">
+      <h2>{{ 'HOME.ROLEPLAY.TITLE' | translate }}</h2>
+      <p>{{ 'HOME.ROLEPLAY.RESUME' | translate }}</p>
+      <button routerLink="roleplay">{{ 'HOME.ROLEPLAY.SEEMORE' | translate | uppercase }}</button>
+  </div>
+</div>
+<div separator></div>
+<div container padding-vert class="head-container">
+  <!--img class="title-background" src="https://via.placeholder.com/1000x400" alt=""-->
+  <div class="title-container">
+      <h2>{{ 'HOME.CHARACTERS.TITLE' | translate }}</h2>
+      <p>{{ 'HOME.CHARACTERS.RESUME' | translate }}</p>
+      <button routerLink="characters">{{ 'HOME.CHARACTERS.SEEMORE' | translate | uppercase }}</button>
+  </div>
+  <div class="glyphe-container little-container">
+    <img src="assets/images/glyphe01.png" class="glyphe glyphe01" alt=""/>
+    <img src="assets/images/glyphe02.png" class="glyphe glyphe02" alt=""/>
+    <img src="assets/images/glyphe03.png" class="glyphe glyphe03" alt=""/>
+    <img src="assets/images/glyphe04.png" class="glyphe glyphe04" alt=""/>
+    <img src="assets/images/glyphe05.png" class="glyphe glyphe05" alt=""/>
   </div>
 </div>
