--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,6 @@
 $light-color: #EEEEEE;
-$dark-color: #092727;
 $default-color: #000000;
 
-$primary-color: #D1E8E2;
-$dark-primary-color: #116466;
-
-$secondary-color: #FFCB94;
-$dark-secondary-color: #D9B08C;
-
+$dark-primary-color: #134457;
+$primary-color: #247899;
+$light-primary-color: #7ADAFF;
