--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,7 +6,7 @@
     justify-content: space-between;
 
     height: 50px;
-    border-bottom: 2px solid $dark-color;
+    border-bottom: 2px solid $primary-color;
     background-color: $default-color;
 
     a {
@@ -18,7 +18,7 @@
         transition: .5s;
 
         &:hover {
-          box-shadow: 0px 0px 10px $secondary-color;
+          color: $light-color;
         }
 
         &:after {
@@ -28,15 +28,15 @@
             left: 0;
             height: 2px;
             width: 100%;
-            background: $dark-secondary-color;
+            background: $light-color;
 
             transform: scaleX(0);
 
-            transition: transform .12s cubic-bezier(0.4, 0.0, 0.2, 1);;
+            transition: transform .12s cubic-bezier(0.4, 0.0, 0.2, 1);
         }
 
         &.active {
-            color: $secondary-color;
+            color: $light-color;
 
             &:after {
                 transform: scaleX(1);
@@ -49,7 +49,7 @@
     }
 
     .header-title {
-        color: $secondary-color;
+        color: $light-color;
     }
 
     .header-section {
