--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -3,7 +3,7 @@
 :host {
 
     text-align: center;
-    
+
     .head-container {
         position: relative;
         height: 250px;
@@ -106,48 +106,48 @@
         height: 100%;
         width: 100%;
         border-radius: 50%;
-        box-shadow: 0px 0px 5px $primary-color, inset 0px 0px 5px $primary-color;
+        box-shadow: 0px 0px 5px $primary-color, inset 0px 0px 5px $light-primary-color;
     }
-    
-    .glyphe01 {
+
+    .head-container:hover .glyphe01 {
         animation: anim01 4s infinite ease-in-out;
-    
+
         @keyframes anim01 {
             0% { transform: rotateY(0deg); }
             100% { transform: rotateY(360deg); }
         }
     }
-    
-    .glyphe02 {
+
+    .head-container:hover .glyphe02 {
         animation: anim02 4s infinite ease-in-out;
-    
+
         @keyframes anim02 {
             0% { transform: rotateY(0deg) rotateX(0deg) }
             100% { transform: rotateY(360deg) rotateX(360deg) }
         }
     }
-    
-    .glyphe03 {
+
+    .head-container:hover .glyphe03 {
         animation: anim03 4s infinite ease-in-out;
-    
+
         @keyframes anim03 {
             0% { transform: rotateY(0deg) rotateX(360deg) }
             100% { transform: rotateY(360deg) rotateX(0deg) }
         }
     }
-    
-    .glyphe04 {
+
+    .head-container:hover .glyphe04 {
         animation: anim04 4s infinite ease-in-out;
-    
+
         @keyframes anim04 {
             0% { transform: rotateY(360deg); }
             100% { transform: rotateY(0deg); }
         }
     }
-    
-    .glyphe05 {
+
+    .head-container:hover .glyphe05 {
         animation: anim05 4s infinite ease-in-out;
-    
+
         @keyframes anim05 {
             0% { transform: rotateX(360deg); }
             100% { transform: rotateX(0deg); }
