--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,6 +1,6 @@
 [separator] {
     height: 0px;
-    border-top : 1px solid $secondary-color;
+    border-top : 1px solid $light-primary-color;
 }
 
 [container] {
