--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,11 +12,21 @@ body {
 }
 
 a {
-    color: $light-primary-color;
+    color: $light-color;
     text-decoration: none;
 }
 
 .imgWait {
     height: 400px;
     width: 200px;
+}
+
+button {
+    padding: 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+
+    background: none;
+    border: 1px solid $secondary-color;
+    color: $light-secondary-color;
 }
