--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,3 +4,6 @@ $default-color: #000000;
 $dark-primary-color: #134457;
 $primary-color: #247899;
 $light-primary-color: #7ADAFF;
+
+$secondary-color: #D4CA88;
+$light-secondary-color: #FFEB94;
