--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,22 +7,22 @@
       <button routerLink="universe">{{ 'HOME.UNIVERSE.SEEMORE' | translate | uppercase }}</button>
   </div>
   <div class="glyphe-container">
-    <img src="assets/images/glyphe01.png" class="glyphe glyphe01" alt=""/>
-    <img src="assets/images/glyphe02.png" class="glyphe glyphe02" alt=""/>
-    <img src="assets/images/glyphe03.png" class="glyphe glyphe03" alt=""/>
-    <img src="assets/images/glyphe04.png" class="glyphe glyphe04" alt=""/>
-    <img src="assets/images/glyphe05.png" class="glyphe glyphe05" alt=""/>
+    <img src="assets/images/glyphe_map_01.png" class="glyphe glyphe01" alt=""/>
+    <img src="assets/images/glyphe_map_02.png" class="glyphe glyphe02" alt=""/>
+    <img src="assets/images/glyphe_map_03.png" class="glyphe glyphe03" alt=""/>
+    <img src="assets/images/glyphe_map_04.png" class="glyphe glyphe04" alt=""/>
+    <img src="assets/images/glyphe_map_05.png" class="glyphe glyphe05 map" alt=""/>
   </div>
 </div>
 <div separator></div>
 <div container padding-vert class="head-container">
   <!--img class="title-background" src="https://via.placeholder.com/1000x400" alt=""-->
   <div class="glyphe-container inversed-container little-container">
-    <img src="assets/images/glyphe01.png" class="glyphe glyphe01" alt=""/>
-    <img src="assets/images/glyphe02.png" class="glyphe glyphe02" alt=""/>
-    <img src="assets/images/glyphe03.png" class="glyphe glyphe03" alt=""/>
-    <img src="assets/images/glyphe04.png" class="glyphe glyphe04" alt=""/>
-    <img src="assets/images/glyphe05.png" class="glyphe glyphe05" alt=""/>
+    <img src="assets/images/glyphe_dices_01.png" class="glyphe glyphe01" alt=""/>
+    <img src="assets/images/glyphe_dices_02.png" class="glyphe glyphe02" alt=""/>
+    <img src="assets/images/glyphe_dices_03.png" class="glyphe glyphe03" alt=""/>
+    <img src="assets/images/glyphe_dices_04.png" class="glyphe glyphe04" alt=""/>
+    <img src="assets/images/glyphe_dices_05.png" class="glyphe glyphe05 dices" alt=""/>
   </div>
   <div class="title-container inversed-container">
       <h2>{{ 'HOME.ROLEPLAY.TITLE' | translate | uppercase }}</h2>
@@ -39,10 +39,10 @@
       <button routerLink="characters">{{ 'HOME.CHARACTERS.SEEMORE' | translate | uppercase }}</button>
   </div>
   <div class="glyphe-container little-container">
-    <img src="assets/images/glyphe01.png" class="glyphe glyphe01" alt=""/>
-    <img src="assets/images/glyphe02.png" class="glyphe glyphe02" alt=""/>
-    <img src="assets/images/glyphe03.png" class="glyphe glyphe03" alt=""/>
-    <img src="assets/images/glyphe04.png" class="glyphe glyphe04" alt=""/>
-    <img src="assets/images/glyphe05.png" class="glyphe glyphe05" alt=""/>
+    <img src="assets/images/glyphe_book_01.png" class="glyphe glyphe01" alt=""/>
+    <img src="assets/images/glyphe_book_02.png" class="glyphe glyphe02" alt=""/>
+    <img src="assets/images/glyphe_book_03.png" class="glyphe glyphe03" alt=""/>
+    <img src="assets/images/glyphe_book_04.png" class="glyphe glyphe04" alt=""/>
+    <img src="assets/images/glyphe_book_05.png" class="glyphe glyphe05 book" alt=""/>
   </div>
 </div>
