Feat(footer): add the structure of the footer

--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -41,12 +41,12 @@
         align-content: space-between;
         justify-content: center;
         max-width: 1260px;
-        border: 10px double $light-primary-color;
+        border: 10px double $light-secondary-color;
 
         .fact-container {
             width: 250px;
             height: 300px;
-            border: 1px solid $dark-primary-color;
+            border: 1px solid $secondary-color;
             border-radius: 10px;
             color: $dark-primary-color;
             background-color: $light-color;
@@ -57,7 +57,7 @@
             transition: .5s;
 
             &:hover {
-                box-shadow: 0px 0px 0px 3px $light-primary-color;
+                box-shadow: 0px 0px 0px 3px $secondary-color;
             }
 
             .fact-image {
