--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,33 @@
 <div class="footer-infos">
-
+    <ul>
+        <li>
+            <a href="https://www.facebook.com/spefire" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i class="fab fa-facebook-f"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://twitter.com/spefire" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i class="fab fa-twitter"></i>
+            </a>
+        </li>
+        <li>
+            <a href="https://www.instagram.com/spefire_insta" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <i class="fab fa-instagram"></i>
+            </a>
+        </li>
+    </ul>
 </div>
 
 <div class="footer-navigation">
