--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,7 +2,7 @@
 
 :host {
     display: block;
-    height: 250px;
+    height: 210px;
     background-color: $default-color;
 
     .footer-infos {
@@ -10,8 +10,104 @@
         align-items: center;
         justify-content: space-between;
 
-        height: 200px;
+        position: relative;
+        height: 160px;
         border-top: 1px solid $secondary-color;
+
+        ul {
+            display: flex;
+
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            margin: 0;
+            padding: 0;
+
+            li {
+                list-style: none;
+
+                a {
+                    display: block;
+                    position: relative;
+                    height: 80px;
+                    width: 80px;
+                    margin: 0 20px;
+
+                    line-height: 80px;
+                    font-size: 40px;
+                    text-align: center;
+                    transition: 0.5s;
+
+                    span {
+                        position: absolute;
+                        transition: transform 0.5s;
+                        background-color: $secondary-color;
+                    }
+
+                    span:nth-child(1), span:nth-child(3) {
+                        height: 1px;
+                        width: 100%;
+                    }
+
+                    span:nth-child(1) {
+                        top: 0;
+                        left: 0;
+                        transform-origin: right;
+                    }
+
+                    &:hover span:nth-child(1) {
+                        transform: scaleX(0);
+                        transform-origin: left;
+                        transition: transform 0.5s; 
+                    }
+
+                    span:nth-child(3) {
+                        bottom: 0;
+                        right: 0;
+                        transform-origin: left;
+                    }
+
+                    &:hover span:nth-child(3) {
+                        transform: scaleX(0);
+                        transform-origin: right;
+                        transition: transform 0.5s; 
+                    }
+
+                    span:nth-child(2), span:nth-child(4) {
+                        height: 100%;
+                        width: 1px;
+                    }
+
+                    span:nth-child(2) {
+                        top: 0;
+                        left: 0;
+                        transform: scaleY(0);
+                        transform-origin: bottom;
+                    }
+
+                    &:hover span:nth-child(2) {
+                        transform: scaleY(1);
+                        transform-origin: top;
+                        transition: transform 0.5s; 
+                    }
+
+                    span:nth-child(4) {
+                        top: 0;
+                        right: 0;
+                        transform: scaleY(0);
+                        transform-origin: top;
+                    }
+
+                    &:hover span:nth-child(4) {
+                        transform: scaleY(1);
+                        transform-origin: bottom;
+                        transition: transform 0.5s; 
+                    }
+                }
+            }
+        }
     }
 
     .footer-navigation {
