Fix(footer): add a scrollToTop and a animation on the button

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,9 +3,7 @@
         <div class="footer-container">
             <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
             <p>{{ 'FOOTER.RESUME' | translate }}</p>
-            <span routerLink="about">
-                <i class="fas fa-chevron-right"></i>{{ 'FOOTER.SEEMORE' | translate | uppercase }}
-            </span>
+            <span routerLink="about"><i class="fas fa-chevron-right"></i>{{ 'FOOTER.SEEMORE' | translate | uppercase }}</span>
         </div>
     </div>
     <div class="footer-right">
