Fix(header): Change the header with the location

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -41,9 +41,9 @@
 
 <div class="footer-navigation">
     <nav>
-        <a routerLinkActive="active" routerLink="legacy" [innerHtml]="'HEADER.NAV.LEGACY' | translate | uppercase"></a>
+        <a routerLinkActive="active" routerLink="legacy" [innerHtml]="'HEADER.LEGACY' | translate | uppercase"></a>
     </nav>
-    <div class="header-section section-right">
-        <a class="header-title" routerLinkActive="active" routerLink="about" [innerHtml]="'HEADER.NAV.ABOUT' | translate | uppercase"></a>
+    <div class="footer-section section-right">
+        <a class="footer-title" routerLinkActive="active" routerLink="about" [innerHtml]="'HEADER.ABOUT' | translate | uppercase"></a>
     </div>
 </div>
