--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -172,15 +172,15 @@
             }
         }
 
-        .header-logo {
+        .footer-logo {
             cursor: pointer;
         }
 
-        .header-title {
+        .footer-title {
             color: $light-secondary-color;
         }
 
-        .header-section {
+        .footer-section {
             display: flex;
             align-items: center;
             min-width: 25%;
