--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -1,11 +1,18 @@
 <div style="text-align:center">
   <div container padding-vert class="head-container">
-    <img class="title-background" src="https://via.placeholder.com/1000x400" alt="">
-    <div class="title-container">
+    <div class="map-left">
         <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
         <h2>{{ listFacts[0].title | translate }}</h2>
         <p>{{ listFacts[0].description | translate }}</p>
         <button routerLink="/universe/{{listFacts[0].id}}">{{ 'UNIVERSE.SEEMORE' | translate | uppercase }}</button>
+    </div>
+    <div class="map-right">
+      <img id="map-arlenor" class="map-background" src="assets/images/map.png" width="1800" height="1200" alt="" usemap="#map">
+      <map name="map" id="map">
+        <area shape='poly' [coords]='getCoords()'
+        onmouseover="document.images['map-arlenor'].src='assets/images/map_celestia.png';"
+        onmouseout="document.images['map-arlenor'].src='assets/images/map.png';"/>
+      </map>
     </div>
   </div>
   <div container padding-vert class="list-facts-container">
