--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -3,35 +3,32 @@
 :host {
 
     .head-container {
+        display: flex;
         position: relative;
-        height: 250px;
 
-        .title-background {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            //max-width: 600px;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: -1;
-            margin-left: auto;
-            margin-right: auto;
+        .map-left {
+          width: 30%;
+          text-align: left;
+          padding-left: 5%;
+          margin: auto 0;
+
+          .logo-image {
+            height: 100px;
+            width: 250px;
+            border: 1px solid black;
+          }
         }
 
-        .title-container {
-            position: absolute;
-            top: 50%;
-            left: 25%;
-            width: 25%;
-            text-align: left;
-            transform: translateX(-50%) translateY(-50%);
+        .map-right {
+          width: 70%;
+          padding-right: 5%;
+          position: relative;
 
-            .logo-image {
-                height: 100px;
-                width: 250px;
-                border: 1px solid black;
-            }
+          .map-background {
+            height: auto;;
+            width: 100%;
+            margin: auto 0;
+          }
         }
     }
 
